Added passwords match validation by annotation. Removed google recaptcha while login and edit profile. Huge code refactoring. Added backEnd for password change. Removed required password from user info change.