@@ -2,13 +2,13 @@ package com.ness.movie_release_web.controller;
 
 import com.ness.movie_release_web.model.Film;
 import com.ness.movie_release_web.model.User;
-import com.ness.movie_release_web.model.wrapper.tmdb.Language;
-import com.ness.movie_release_web.model.wrapper.tmdb.Mode;
-import com.ness.movie_release_web.model.wrapper.tmdb.movie.details.MovieDetailsWrapper;
-import com.ness.movie_release_web.model.wrapper.tmdb.movie.details.Status;
-import com.ness.movie_release_web.model.wrapper.tmdb.movie.discover.DiscoverSearchCriteria;
-import com.ness.movie_release_web.model.wrapper.tmdb.movie.search.MovieSearchWrapper;
-import com.ness.movie_release_web.model.wrapper.tmdb.movie.search.MovieWrapper;
+import com.ness.movie_release_web.model.dto.tmdb.Language;
+import com.ness.movie_release_web.model.dto.tmdb.Mode;
+import com.ness.movie_release_web.model.dto.tmdb.movie.details.MovieDetailsDto;
+import com.ness.movie_release_web.model.dto.tmdb.movie.details.Status;
+import com.ness.movie_release_web.model.dto.tmdb.movie.discover.DiscoverSearchCriteria;
+import com.ness.movie_release_web.model.dto.tmdb.movie.search.MovieSearchDto;
+import com.ness.movie_release_web.model.dto.tmdb.movie.search.MovieDto;
 import com.ness.movie_release_web.repository.MovieSortBy;
 import com.ness.movie_release_web.service.FilmService;
 import com.ness.movie_release_web.service.SubscriptionService;
@@ -65,7 +65,7 @@ public class MovieController {
             model.addAttribute("subscribed", true);
         }
 
-        Optional<MovieDetailsWrapper> movieDetails = movieService.getMovieDetails(tmdbId, language);
+        Optional<MovieDetailsDto> movieDetails = movieService.getMovieDetails(tmdbId, language);
         if (!movieDetails.isPresent())
             throw new ResponseStatusException(HttpStatus.NOT_FOUND);
 
@@ -104,31 +104,31 @@ public class MovieController {
         model.addAttribute("language", language);
         model.addAttribute("mode", mode);
 
-        Optional<MovieSearchWrapper> optionalMovieSearch = movieService.searchForMovies(query, page, year, language);
+        Optional<MovieSearchDto> optionalMovieSearch = movieService.searchForMovies(query, page, year, language);
 
         if (!optionalMovieSearch.isPresent()) {
             throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR);
         }
 
-        MovieSearchWrapper movieSearchWrapper = optionalMovieSearch.get();
+        MovieSearchDto movieSearchDto = optionalMovieSearch.get();
 
-        Map<MovieWrapper, Boolean> filmsWithSubFlags = movieSearchWrapper.getResults().stream().collect(toMap(f -> f,
+        Map<MovieDto, Boolean> filmsWithSubFlags = movieSearchDto.getResults().stream().collect(toMap(f -> f,
                 f -> filmService.isExistsByTmdbIdAndUser(f.getId(), user), (f1, f2) -> f1, LinkedHashMap::new));
         model.addAttribute("films", filmsWithSubFlags);
 
-        model.addAttribute("pageCount", movieSearchWrapper.getTotalPages());
+        model.addAttribute("pageCount", movieSearchDto.getTotalPages());
         model.addAttribute("page", page);
         return "movieSearchResult";
     }
 
     @GetMapping("/api/search")
     @ResponseBody
-    public ResponseEntity<MovieSearchWrapper> searchApi(@RequestParam("query") String query,
-            @RequestParam(required = false, name = "year") Long year,
-            @RequestParam(required = false, name = "page") Integer page,
-            @CookieValue(value = "language", defaultValue = "en") Language language) {
+    public ResponseEntity<MovieSearchDto> searchApi(@RequestParam("query") String query,
+                                                    @RequestParam(required = false, name = "year") Long year,
+                                                    @RequestParam(required = false, name = "page") Integer page,
+                                                    @CookieValue(value = "language", defaultValue = "en") Language language) {
 
-        Optional<MovieSearchWrapper> optionalMovieSearch = movieService.searchForMovies(query, page, year, language);
+        Optional<MovieSearchDto> optionalMovieSearch = movieService.searchForMovies(query, page, year, language);
 
         if (!optionalMovieSearch.isPresent()) {
             throw new ResponseStatusException(HttpStatus.NO_CONTENT);
@@ -152,7 +152,7 @@ public class MovieController {
             statuses = emptyList();
         }
 
-        Boolean viewMode = new Boolean(subsMode);
+        Boolean viewMode = Boolean.valueOf(subsMode);
 
         User user = userService.findByLogin(principal.getName());
 
@@ -176,10 +176,10 @@ public class MovieController {
         Page<Film> filmPage = filmService.getByUserAndStatusWithOrderbyAndPages(statuses, sortBy, user, page - 1, size);
         List<Film> films = filmPage.getContent();
 
-        List<MovieDetailsWrapper> tmdbFilms;
+        List<MovieDetailsDto> tmdbFilms;
 
         if (viewMode) {
-            tmdbFilms = films.stream().map(f -> MovieDetailsWrapper.of(f, language)).collect(toList());
+            tmdbFilms = films.stream().map(f -> MovieDetailsDto.of(f, language)).collect(toList());
         } else {
             tmdbFilms = films.stream().map(f -> movieService.getMovieDetails(f.getId(), language))
                     .filter(Optional::isPresent).map(Optional::get).collect(toList());
@@ -213,19 +213,19 @@ public class MovieController {
         criteria.setPage(page);
         criteria.setLanguage(language);
 
-        Optional<MovieSearchWrapper> optionalMovieSearch = discoverService.discoverMovie(criteria);
+        Optional<MovieSearchDto> optionalMovieSearch = discoverService.discoverMovie(criteria);
 
         if (optionalMovieSearch.isPresent()) {
 
-            MovieSearchWrapper movieSearchWrapper = optionalMovieSearch.get();
+            MovieSearchDto movieSearchDto = optionalMovieSearch.get();
 
-            Map<MovieWrapper, Boolean> filmsWithSubFlags = movieSearchWrapper.getResults().stream()
+            Map<MovieDto, Boolean> filmsWithSubFlags = movieSearchDto.getResults().stream()
                     .collect(toMap(f -> f, f -> filmService.isExistsByTmdbIdAndUser(f.getId(), user), (f1, f2) -> f1,
                             LinkedHashMap::new));
             model.addAttribute("films", filmsWithSubFlags);
 
             model.addAttribute("pageCount",
-                    movieSearchWrapper.getTotalPages() > 1000 ? 1000 : movieSearchWrapper.getTotalPages());
+                    movieSearchDto.getTotalPages() > 1000 ? 1000 : movieSearchDto.getTotalPages());
             model.addAttribute("page", page);
         }
 
@@ -237,7 +237,7 @@ public class MovieController {
         model.addAttribute("people", peopleService.getPeopleList(criteria.getPeople(), language));
         model.addAttribute("criteria", criteria);
 
-        // adding genreWrappers to form
+        // adding genres to form
         model.addAttribute("genres", genreService.getMovieGenres(language));
 
         return "discoverMovies";
